update github details in hugo penmark config

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -29,8 +29,8 @@
       draftsFolder="drafts"
       postsFolder="content/posts"
       imagesFolder="static/images"
-      githubUsername="nikhilvscitrus"
-      githubRepoName="hugo-penmark"
+      githubUsername="georgejdev"
+      githubRepoName="hugo-penmark-samp"
       postfilepath="{{ $filePath }}"
     ></script>
   </header>
