--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,8 +11,8 @@
     draftsFolder="drafts"
     postsFolder="content/posts"
     imagesFolder="static/images"
-    githubUsername="nikhilcitrus"
-    githubRepoName="hugo-penmark"
+    githubUsername="georgejdev"
+    githubRepoName="hugo-penmark-samp"
 ></script>
 {{- end }}
 
